force-app/main/default/objects/TTR_Product_Association__c/TTR_Product_Association__c.object-meta.xml
<CustomObject>
    <description>This is the Junction object between Products and the TTR Form</description>
    <label>TTR Product Association</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTR Product Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>