force-app/main/default/objects/TTR_Product_Association__c/fields/Product_Lookup_del__c.field-meta.xml
<CustomField>
    <fullName>Product_Lookup_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Lookup</description>
    <inlineHelpText>Product lookup</inlineHelpText>
    <label>Product Lookup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>TTR_to_Product_Junction_Objects_del</relationshipName>
    <type>Lookup</type>
</CustomField>