force-app/main/default/objects/TTR_Product_Association__c/fields/Product_Qty__c.field-meta.xml
<CustomField>
    <fullName>Product_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This is a default quantity for the counting of products.</inlineHelpText>
    <label>Product Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>