force-app/main/default/objects/TTR_Product_Association__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Carried vs Product Requested</description>
    <inlineHelpText>Please enter if this product is Carried vs Requested by the store.</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter Casual Carried</fullName>
            </value>
            <value>
                <fullName>Irish Setter Casual Requested</fullName>
            </value>
            <value>
                <fullName>Irish Setter Hunt Carried</fullName>
            </value>
            <value>
                <fullName>Irish Setter Hunt Store Requested</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work Carried</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work Store Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>