force-app/main/default/objects/TTR_Product_Association__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <description>Shipping City from the related Account.</description>
    <formula>TTR_Request_Form_Lookup__r.Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Shipping City from the related Account.</inlineHelpText>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>