force-app/main/default/objects/TTR_Product_Association__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <description>This is the Shipping State from the Account.</description>
    <formula>TTR_Request_Form_Lookup__r.Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Shipping State from the Account.</inlineHelpText>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>