force-app/main/default/objects/TTR_Product_Association__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>This is the brand code from the product object.</description>
    <formula>Product_Lookup_del__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the brand code from the product object.</inlineHelpText>
    <label>Style Number</label>
    <type>Text</type>
</CustomField>