force-app/main/default/objects/TTR_Product_Association__c/fields/TTR_Product_Notes__c.field-meta.xml
<CustomField>
    <fullName>TTR_Product_Notes__c</fullName>
    <description>These  are TTR Product Related Notes.</description>
    <inlineHelpText>These are TTR Product Related Notes.</inlineHelpText>
    <label>TTR Product Notes</label>
    <type>TextArea</type>
</CustomField>