force-app/main/default/objects/TTR_Product_Association__c/fields/TTR_Request_Form_Lookup__c.field-meta.xml
<CustomField>
    <fullName>TTR_Request_Form_Lookup__c</fullName>
    <description>Lookup to TTR Form.</description>
    <inlineHelpText>Lookup to TTR Form.</inlineHelpText>
    <label>TTR Request Form Lookup</label>
    <referenceTo>TTR_Request_Form__c</referenceTo>
    <relationshipName>TTR_to_Product_Junction_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>